[package]
name = "serde-json-rpc-example"
version = "0.1.0"
authors = ["Christian Betz <christian.betz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
